[package]
name          = "superfluid-mosmo-staking"
description   = "A smart contract that manages mosmo to be staked"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std        = { workspace = true }
cw2                 = { workspace = true }
cw-storage-plus     = { workspace = true }
cw-utils            = { workspace = true }
# mars-health         = { workspace = true }
mars-owner          = { workspace = true }
mars-red-bank-types = { workspace = true }
mars-utils          = { workspace = true }
thiserror           = { workspace = true }
cw20 =  { workspace = true }
cw20-base =  { workspace = true }
schemars            = { workspace = true }
serde               = { workspace = true }
m-token = {workspace=true}
